Merge changes from ongoing work in content-filter-framework branch